add monthly dataset for Louisiana

--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c6ed01ae",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "import eia\n",
+    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
+    "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
     "# Set plotting style\n",
     "sns.set(style='whitegrid')"
@@ -132,16 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1f1e8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e5718761",
    "metadata": {},
    "outputs": [],
@@ -164,156 +155,79 @@
     "df['Date'] = pd.to_datetime(df['date'])\n",
     "df['Price'] = df['value']\n",
     "df = df[['Date', 'Price']].sort_values(by='Date').reset_index(drop=True)\n",
-    "\n",
     "df.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1729291",
+   "id": "305bf948",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop the original 'data' column if no longer needed\n",
-    "df.drop(columns=['data'], inplace=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get distinct series_id, name pairs\n",
-    "series_names = df[['series_id', 'name']].drop_duplicates()\n",
-    "series_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd97269a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot time series data for different series\n",
+    "# Plot historical prices\n",
     "plt.figure(figsize=(14, 7))\n",
-    "for series in df['series_id'].unique():\n",
-    "    subset = df[df['series_id'] == series]\n",
-    "    plt.plot(subset['date'], subset['value'], label=subset['name'].iloc[0])\n",
-    "\n",
+    "plt.plot(df['Date'], df['Price'], label='Price')\n",
+    "plt.title('Historical Gasoline Prices')\n",
     "plt.xlabel('Date')\n",
-    "plt.ylabel('Price (Dollars per Gallon)')\n",
-    "plt.title('Oil Prices Over Time')\n",
+    "plt.ylabel('Price ($/gal)')\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "\n",
-    "# Summary statistics\n",
-    "print(df.describe())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "688d7470",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filter the dataset for a specific series_id for forecasting\n",
-    "series_id = 'PET.EMM_EPMPR_PTE_Y35NY_DPG.W'  # Example series_id\n",
-    "df_series = df[df['series_id'] == series_id][['date', 'value']].rename(columns={'date': 'ds', 'value': 'y'})\n",
-    "\n",
-    "# Display the first few rows of the filtered DataFrame\n",
-    "print(df_series.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6bb2696",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming df_series is a DataFrame with two columns: 'ds' for dates and 'y' for values\n",
-    "# Convert 'ds' from datetime to ordinal\n",
-    "df_series['ds_ordinal'] = df_series['ds'].apply(lambda x: x.toordinal())\n",
-    "\n",
-    "# Split data into features and target\n",
-    "X = df_series[['ds_ordinal']]\n",
-    "y = df_series['y']\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Initialize and fit the Linear Regression model\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Predict using the model\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# To forecast future dates, create a DataFrame for future dates and convert to ordinal\n",
-    "future_dates = pd.date_range(start=df_series['ds'].max(), periods=365, freq='D')\n",
-    "future_dates_ordinal = future_dates.to_series().apply(lambda x: x.toordinal()).values.reshape(-1, 1)\n",
-    "\n",
-    "# Forecast future values\n",
-    "future_forecast = model.predict(future_dates_ordinal)\n",
-    "\n",
-    "# Plot the forecast\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.scatter(df_series['ds'], y, color='black', label='Actual')\n",
-    "plt.plot(future_dates, future_forecast, color='blue', label='Forecast')\n",
-    "plt.title('Oil Price Forecast')\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('Price (Dollars per Gallon)')\n",
-    "plt.legend()\n",
+    "plt.grid(True)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c692bd3f",
+   "id": "1f8f14fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert 'ds' to ordinal\n",
-    "df_series['ds_ordinal'] = df_series['ds'].apply(lambda x: x.toordinal())\n",
+    "# Moving Average\n",
+    "df['Price_MA'] = df['Price'].rolling(window=12).mean()\n",
     "\n",
-    "# Split data into training and testing sets\n",
-    "train = df_series[df_series['ds'] < '2023-01-01']\n",
-    "test = df_series[df_series['ds'] >= '2023-01-01']\n",
-    "\n",
-    "# Prepare the features and target variables\n",
-    "X_train = train[['ds_ordinal']]\n",
-    "y_train = train['y']\n",
-    "X_test = test[['ds_ordinal']]\n",
-    "y_test = test['y']\n",
-    "\n",
-    "# Initialize and train the Linear Regression model\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the test set\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "# Calculate MAE and RMSE\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "rmse = mean_squared_error(y_test, y_pred, squared=False)\n",
-    "\n",
-    "print(f'MAE: {mae}')\n",
-    "print(f'RMSE: {rmse}')\n",
-    "\n",
-    "# Plot actual vs predicted values\n",
     "plt.figure(figsize=(14, 7))\n",
-    "plt.plot(test['ds'], y_test, label='Actual')\n",
-    "plt.plot(test['ds'], y_pred, label='Predicted')\n",
+    "plt.plot(df['Date'], df['Price'], label='Price')\n",
+    "plt.plot(df['Date'], df['Price_MA'], label='12-Month Moving Average', color='red')\n",
+    "plt.title('Gasoline Prices with Moving Average')\n",
     "plt.xlabel('Date')\n",
-    "plt.ylabel('Price (Dollars per Gallon)')\n",
-    "plt.title('Actual vs Predicted Oil Prices')\n",
+    "plt.ylabel('Price ($/gal)')\n",
     "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e3e0652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moving Average\n",
+    "df['Price_MA'] = df['Price'].rolling(window=12).mean()\n",
+    "\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "plt.plot(df['Date'], df['Price'], label='Price')\n",
+    "plt.plot(df['Date'], df['Price_MA'], label='12-Month Moving Average', color='red')\n",
+    "plt.title('Gasoline Prices with Moving Average')\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Price ($/gal)')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbb2496e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decomposition\n",
+    "decompose_result = seasonal_decompose(df['Price'], model='additive', period=12)\n",
+    "decompose_result.plot()\n",
     "plt.show()"
    ]
   },
