add monthly dataset for Louisiana

--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
+    "import altair as alt\n",
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "from sklearn.model_selection import train_test_split\n",
