--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "c6ed01ae",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,10 +143,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "f9482765",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>series_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>units</th>\n",
+       "      <th>f</th>\n",
+       "      <th>unitsshort</th>\n",
+       "      <th>description</th>\n",
+       "      <th>copyright</th>\n",
+       "      <th>source</th>\n",
+       "      <th>iso3166</th>\n",
+       "      <th>geography</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>last_updated</th>\n",
+       "      <th>data</th>\n",
+       "      <th>geography2</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>parent_category_id</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>childseries</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "      <td>W</td>\n",
+       "      <td>$/gal</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>EIA, U.S. Energy Information Administration</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>20000605</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>2024-06-17T22:10:18-04:00</td>\n",
+       "      <td>[20240617, 4.306]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "      <td>W</td>\n",
+       "      <td>$/gal</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>EIA, U.S. Energy Information Administration</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>20000605</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>2024-06-17T22:10:18-04:00</td>\n",
+       "      <td>[20240610, 4.328]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "      <td>W</td>\n",
+       "      <td>$/gal</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>EIA, U.S. Energy Information Administration</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>20000605</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>2024-06-17T22:10:18-04:00</td>\n",
+       "      <td>[20240603, 4.367]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "      <td>W</td>\n",
+       "      <td>$/gal</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>EIA, U.S. Energy Information Administration</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>20000605</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>2024-06-17T22:10:18-04:00</td>\n",
+       "      <td>[20240527, 4.412]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "      <td>W</td>\n",
+       "      <td>$/gal</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>EIA, U.S. Energy Information Administration</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>USA-NY</td>\n",
+       "      <td>20000605</td>\n",
+       "      <td>20240617</td>\n",
+       "      <td>2024-06-17T22:10:18-04:00</td>\n",
+       "      <td>[20240520, 4.399]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       series_id  \\\n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "\n",
+       "                                                name               units  f  \\\n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+       "\n",
+       "  unitsshort                                        description copyright  \\\n",
+       "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+       "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+       "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+       "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+       "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+       "\n",
+       "                                        source iso3166 geography     start  \\\n",
+       "0  EIA, U.S. Energy Information Administration  USA-NY    USA-NY  20000605   \n",
+       "0  EIA, U.S. Energy Information Administration  USA-NY    USA-NY  20000605   \n",
+       "0  EIA, U.S. Energy Information Administration  USA-NY    USA-NY  20000605   \n",
+       "0  EIA, U.S. Energy Information Administration  USA-NY    USA-NY  20000605   \n",
+       "0  EIA, U.S. Energy Information Administration  USA-NY    USA-NY  20000605   \n",
+       "\n",
+       "        end               last_updated               data geography2  \\\n",
+       "0  20240617  2024-06-17T22:10:18-04:00  [20240617, 4.306]        NaN   \n",
+       "0  20240617  2024-06-17T22:10:18-04:00  [20240610, 4.328]        NaN   \n",
+       "0  20240617  2024-06-17T22:10:18-04:00  [20240603, 4.367]        NaN   \n",
+       "0  20240617  2024-06-17T22:10:18-04:00  [20240527, 4.412]        NaN   \n",
+       "0  20240617  2024-06-17T22:10:18-04:00  [20240520, 4.399]        NaN   \n",
+       "\n",
+       "  category_id parent_category_id notes childseries  \n",
+       "0         NaN                NaN   NaN         NaN  \n",
+       "0         NaN                NaN   NaN         NaN  \n",
+       "0         NaN                NaN   NaN         NaN  \n",
+       "0         NaN                NaN   NaN         NaN  \n",
+       "0         NaN                NaN   NaN         NaN  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Explode the 'data' column to separate rows for each date-value pair\n",
     "df = df.explode('data')\n",
@@ -155,10 +361,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5ec9beb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>series_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>units</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y35NY_DPG.W</td>\n",
+       "      <td>New York Harbor Premium Reformulated Retail Ga...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PET.EMM_EPMPR_PTE_Y44HO_DPG.W</td>\n",
+       "      <td>Houston, TX Premium Reformulated Retail Gasoli...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PET.EMM_EPMMR_PTE_R5XCA_DPG.W</td>\n",
+       "      <td>West Coast (PADD 5) Except California Midgrade...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PET.EMM_EPMMR_PTE_Y05LA_DPG.W</td>\n",
+       "      <td>Los Angeles, CA Midgrade Reformulated Retail G...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PET.EMM_EPMMR_PTE_Y05SF_DPG.W</td>\n",
+       "      <td>San Francisco, CA Midgrade Reformulated Retail...</td>\n",
+       "      <td>Dollars per Gallon</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       series_id  \\\n",
+       "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+       "1  PET.EMM_EPMPR_PTE_Y44HO_DPG.W   \n",
+       "2  PET.EMM_EPMMR_PTE_R5XCA_DPG.W   \n",
+       "3  PET.EMM_EPMMR_PTE_Y05LA_DPG.W   \n",
+       "4  PET.EMM_EPMMR_PTE_Y05SF_DPG.W   \n",
+       "\n",
+       "                                                name               units  \n",
+       "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  \n",
+       "1  Houston, TX Premium Reformulated Retail Gasoli...  Dollars per Gallon  \n",
+       "2  West Coast (PADD 5) Except California Midgrade...  Dollars per Gallon  \n",
+       "3  Los Angeles, CA Midgrade Reformulated Retail G...  Dollars per Gallon  \n",
+       "4  San Francisco, CA Midgrade Reformulated Retail...  Dollars per Gallon  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Select distinct series_id, name, units\n",
     "df_series = df[['series_id', 'name', 'units']].drop_duplicates()\n",
@@ -167,10 +455,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5193d1ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "units\n",
+       "Thousand Barrels                     68599\n",
+       "Thousand Barrels per Day             67817\n",
+       "Dollars per Gallon                   17835\n",
+       "Thousand Gallons per Day             11784\n",
+       "Thousand Gallons                      6001\n",
+       "Barrels per Stream Day                1960\n",
+       "Million Barrels                       1261\n",
+       "Percent                                623\n",
+       "Barrels per Calendar Day               343\n",
+       "Dollars per Barrel                     304\n",
+       "Number of Elements                     287\n",
+       "Billion Cubic Feet                     168\n",
+       "Million Gallons                        117\n",
+       "Million Cubic Feet per Day              49\n",
+       "Short Tons per Day                      49\n",
+       "Thousand Barrels per Calendar Day       44\n",
+       "Thouand Barrels per Day                 32\n",
+       "Degree                                  32\n",
+       "Million Cubic Feet                      16\n",
+       "Thousand Feet                           14\n",
+       "Feet per Well                           12\n",
+       "Million Pounds                           7\n",
+       "Million Kilowatthours                    7\n",
+       "Thousand Short Tons                      7\n",
+       "Number of Days                           5\n",
+       "Thousand Dollars per Well                5\n",
+       "Dollars per Foot                         5\n",
+       "Days                                     2\n",
+       "Thousand Barrels  per Day                2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Return a count of the number of records by units \n",
     "df_series['units'].value_counts()"
@@ -178,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "1f58e2a2",
    "metadata": {},
    "outputs": [],
@@ -288,7 +617,7 @@
    "outputs": [],
    "source": [
     "# Oil quantities. Filter df to only include units \"Million Barrels\"\n",
-    "df_oil = df[df['units'].str.contains('Million Barrels')]\n",
+    "df_oil = df[df['name'].str.contains('Louisiana Total') & df['units'].str.contains('Million Barrels')]\n",
     "df_oil"
    ]
   },
@@ -372,7 +701,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = load_gas_price_data()"
+    "df = load_gas_price_data()\n",
+    "df"
    ]
   },
   {
@@ -382,7 +712,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_prepared = prepare_data(df)"
+    "df_prepared = prepare_data(df)\n",
+    "df_prepared"
    ]
   },
   {
@@ -393,7 +724,8 @@
    "outputs": [],
    "source": [
     "cutoff_date = '2023-01-01'  # Define your cutoff date here\n",
-    "forecast_df = forecast_prices(df_prepared, cutoff_date)"
+    "forecast_df = forecast_prices(df_prepared, cutoff_date)\n",
+    "forecast_df"
    ]
   },
   {
