--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -36,7 +36,69 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       series_id  \\\n",
+      "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
+      "1  PET.EMM_EPMPR_PTE_Y44HO_DPG.W   \n",
+      "2  PET.EMM_EPMMR_PTE_R5XCA_DPG.W   \n",
+      "3  PET.EMM_EPMMR_PTE_Y05LA_DPG.W   \n",
+      "4  PET.EMM_EPMMR_PTE_Y05SF_DPG.W   \n",
+      "\n",
+      "                                                name               units  f  \\\n",
+      "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
+      "1  Houston, TX Premium Reformulated Retail Gasoli...  Dollars per Gallon  W   \n",
+      "2  West Coast (PADD 5) Except California Midgrade...  Dollars per Gallon  W   \n",
+      "3  Los Angeles, CA Midgrade Reformulated Retail G...  Dollars per Gallon  W   \n",
+      "4  San Francisco, CA Midgrade Reformulated Retail...  Dollars per Gallon  W   \n",
+      "\n",
+      "  unitsshort                                        description copyright  \\\n",
+      "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
+      "1      $/gal  Houston, TX Premium Reformulated Retail Gasoli...      None   \n",
+      "2      $/gal  West Coast (PADD 5) Except California Midgrade...      None   \n",
+      "3      $/gal  Los Angeles, CA Midgrade Reformulated Retail G...      None   \n",
+      "4      $/gal  San Francisco, CA Midgrade Reformulated Retail...      None   \n",
+      "\n",
+      "                                        source iso3166  \\\n",
+      "0  EIA, U.S. Energy Information Administration  USA-NY   \n",
+      "1  EIA, U.S. Energy Information Administration  USA-TX   \n",
+      "2  EIA, U.S. Energy Information Administration     NaN   \n",
+      "3  EIA, U.S. Energy Information Administration  USA-CA   \n",
+      "4  EIA, U.S. Energy Information Administration  USA-CA   \n",
+      "\n",
+      "                                   geography     start       end  \\\n",
+      "0                                     USA-NY  20000605  20240617   \n",
+      "1                                     USA-TX  20000605  20240617   \n",
+      "2  USA-AK+USA-AZ+USA-HI+USA-NV+USA-OR+USA-WA  19980518  20240617   \n",
+      "3                                     USA-CA  20000605  20240617   \n",
+      "4                                     USA-CA  20000605  20240617   \n",
+      "\n",
+      "                last_updated  \\\n",
+      "0  2024-06-17T22:10:18-04:00   \n",
+      "1  2024-06-17T22:10:18-04:00   \n",
+      "2  2024-06-17T22:10:18-04:00   \n",
+      "3  2024-06-17T22:10:18-04:00   \n",
+      "4  2024-06-17T22:10:18-04:00   \n",
+      "\n",
+      "                                                data geography2 category_id  \\\n",
+      "0  [[20240617, 4.306], [20240610, 4.328], [202406...        NaN         NaN   \n",
+      "1  [[20240617, 3.817], [20240610, 3.838], [202406...        NaN         NaN   \n",
+      "2  [[20240617, 4.137], [20240610, 4.306], [202406...        NaN         NaN   \n",
+      "3  [[20240617, 4.865], [20240610, 4.913], [202406...        NaN         NaN   \n",
+      "4  [[20240617, 5.002], [20240610, 5.106], [202406...        NaN         NaN   \n",
+      "\n",
+      "  parent_category_id notes childseries  \n",
+      "0                NaN   NaN         NaN  \n",
+      "1                NaN   NaN         NaN  \n",
+      "2                NaN   NaN         NaN  \n",
+      "3                NaN   NaN         NaN  \n",
+      "4                NaN   NaN         NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data from the text file\n",
     "data = pd.read_csv('data/raw/PET/PET.txt', sep='\\t', header=None, names=['json_str'])\n",
@@ -57,16 +119,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['series_id', 'name', 'units', 'f', 'unitsshort', 'description',\n",
+       "       'copyright', 'source', 'iso3166', 'geography', 'start', 'end',\n",
+       "       'last_updated', 'data', 'geography2', 'category_id',\n",
+       "       'parent_category_id', 'notes', 'childseries'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9482765",
    "metadata": {},
    "outputs": [],
