--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c6ed01ae",
    "metadata": {},
    "outputs": [],
@@ -34,71 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                       series_id  \\\n",
-      "0  PET.EMM_EPMPR_PTE_Y35NY_DPG.W   \n",
-      "1  PET.EMM_EPMPR_PTE_Y44HO_DPG.W   \n",
-      "2  PET.EMM_EPMMR_PTE_R5XCA_DPG.W   \n",
-      "3  PET.EMM_EPMMR_PTE_Y05LA_DPG.W   \n",
-      "4  PET.EMM_EPMMR_PTE_Y05SF_DPG.W   \n",
-      "\n",
-      "                                                name               units  f  \\\n",
-      "0  New York Harbor Premium Reformulated Retail Ga...  Dollars per Gallon  W   \n",
-      "1  Houston, TX Premium Reformulated Retail Gasoli...  Dollars per Gallon  W   \n",
-      "2  West Coast (PADD 5) Except California Midgrade...  Dollars per Gallon  W   \n",
-      "3  Los Angeles, CA Midgrade Reformulated Retail G...  Dollars per Gallon  W   \n",
-      "4  San Francisco, CA Midgrade Reformulated Retail...  Dollars per Gallon  W   \n",
-      "\n",
-      "  unitsshort                                        description copyright  \\\n",
-      "0      $/gal  New York Harbor Premium Reformulated Retail Ga...      None   \n",
-      "1      $/gal  Houston, TX Premium Reformulated Retail Gasoli...      None   \n",
-      "2      $/gal  West Coast (PADD 5) Except California Midgrade...      None   \n",
-      "3      $/gal  Los Angeles, CA Midgrade Reformulated Retail G...      None   \n",
-      "4      $/gal  San Francisco, CA Midgrade Reformulated Retail...      None   \n",
-      "\n",
-      "                                        source iso3166  \\\n",
-      "0  EIA, U.S. Energy Information Administration  USA-NY   \n",
-      "1  EIA, U.S. Energy Information Administration  USA-TX   \n",
-      "2  EIA, U.S. Energy Information Administration     NaN   \n",
-      "3  EIA, U.S. Energy Information Administration  USA-CA   \n",
-      "4  EIA, U.S. Energy Information Administration  USA-CA   \n",
-      "\n",
-      "                                   geography     start       end  \\\n",
-      "0                                     USA-NY  20000605  20240617   \n",
-      "1                                     USA-TX  20000605  20240617   \n",
-      "2  USA-AK+USA-AZ+USA-HI+USA-NV+USA-OR+USA-WA  19980518  20240617   \n",
-      "3                                     USA-CA  20000605  20240617   \n",
-      "4                                     USA-CA  20000605  20240617   \n",
-      "\n",
-      "                last_updated  \\\n",
-      "0  2024-06-17T22:10:18-04:00   \n",
-      "1  2024-06-17T22:10:18-04:00   \n",
-      "2  2024-06-17T22:10:18-04:00   \n",
-      "3  2024-06-17T22:10:18-04:00   \n",
-      "4  2024-06-17T22:10:18-04:00   \n",
-      "\n",
-      "                                                data geography2 category_id  \\\n",
-      "0  [[20240617, 4.306], [20240610, 4.328], [202406...        NaN         NaN   \n",
-      "1  [[20240617, 3.817], [20240610, 3.838], [202406...        NaN         NaN   \n",
-      "2  [[20240617, 4.137], [20240610, 4.306], [202406...        NaN         NaN   \n",
-      "3  [[20240617, 4.865], [20240610, 4.913], [202406...        NaN         NaN   \n",
-      "4  [[20240617, 5.002], [20240610, 5.106], [202406...        NaN         NaN   \n",
-      "\n",
-      "  parent_category_id notes childseries  \n",
-      "0                NaN   NaN         NaN  \n",
-      "1                NaN   NaN         NaN  \n",
-      "2                NaN   NaN         NaN  \n",
-      "3                NaN   NaN         NaN  \n",
-      "4                NaN   NaN         NaN  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data from the text file\n",
     "data = pd.read_csv('data/raw/PET/PET.txt', sep='\\t', header=None, names=['json_str'])\n",
@@ -119,31 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['series_id', 'name', 'units', 'f', 'unitsshort', 'description',\n",
-       "       'copyright', 'source', 'iso3166', 'geography', 'start', 'end',\n",
-       "       'last_updated', 'data', 'geography2', 'category_id',\n",
-       "       'parent_category_id', 'notes', 'childseries'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f9482765",
    "metadata": {},
    "outputs": [],
@@ -247,7 +170,7 @@
     "# Extract relevant columns and preprocess the data\n",
     "df_louisiana['Date'] = pd.to_datetime(df_louisiana['date'])\n",
     "df_louisiana['Price'] = df_louisiana['value']\n",
-    "#df_louisiana = df_louisiana[['Date', 'Price']].sort_values(by='Date').reset_index(drop=True)\n",
+    "df_louisiana = df_louisiana[['Date', 'Price', 'unitsshort', 'name']].sort_values(by='Date').reset_index(drop=True)\n",
     "df_louisiana"
    ]
   },
