add monthly dataset for Louisiana

--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "id": "c6ed01ae",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
    "source": [
     "# Explode the 'data' column to separate rows for each date-value pair\n",
     "df = df.explode('data')\n",
-    "df.head()"
+    "df.head(20)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "# Select distinct series_id, name, units\n",
     "df_series = df[['series_id', 'name', 'units', 'unitsshort']].drop_duplicates()\n",
-    "df_series"
+    "df_series.head(20)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "source": [
     "# Filter rows based on columns: 'series_id', 'units'\n",
     "df_series_nonas = df_series[(df_series['series_id'].notna()) & (df_series['units'].notna())]\n",
-    "df_series_nonas"
+    "df_series_nonas.head(20)"
    ]
   },
   {
@@ -108,7 +108,8 @@
    "outputs": [],
    "source": [
     "date_range_all = df.groupby('name')['end'].agg(['min', 'max'])\n",
-    "date_range_all"
+    "date_range_all_nonas = date_range_all[(date_range_all['min'].notna()) & (date_range_all['max'].notna())]\n",
+    "date_range_all_nonas"
    ]
   },
   {
