cleanup eda and add docstrings

--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -2502,7 +2502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "id": "c13752fb",
    "metadata": {},
    "outputs": [],
@@ -2568,14 +2568,14 @@
     "    # Remove the 'data' column\n",
     "    df = df.drop(columns=['data'])\n",
     "    \n",
-    "    # Convert 'date' to datetime, coercing errors to NaT\n",
-    "    df['date'] = pd.to_datetime(df['date'], format='%Y%m%d', errors='coerce')\n",
+    "    # # Convert 'date' to datetime, coercing errors to NaT\n",
+    "    # df['date'] = pd.to_datetime(df['date'], format='%Y%m%d', errors='coerce')\n",
     "    \n",
-    "    # Convert 'value' to a numeric type, coercing errors to NaN\n",
-    "    df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
+    "    # # Convert 'value' to a numeric type, coercing errors to NaN\n",
+    "    # df['value'] = pd.to_numeric(df['value'], errors='coerce')\n",
     "    \n",
-    "    # Sort by 'date' to ensure chronological order\n",
-    "    df = df.sort_values('date')\n",
+    "    # # Sort by 'date' to ensure chronological order\n",
+    "    # df = df.sort_values('date')\n",
     "    \n",
     "    # Calculate log of 'value' and the difference in log_price\n",
     "    df['log_price'] = np.log(df['value'])\n",
@@ -2637,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "id": "cb1967d7",
    "metadata": {},
    "outputs": [],
