--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -3420,12 +3420,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "1ca84236",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_forecast(df, forecast_df)"
+    "# plot_forecast(df, forecast_df)"
    ]
   },
   {
