--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -3967,6 +3967,14 @@
      "text": [
       " This problem is unconstrained.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "At iterate    5    f=  1.47854D+00    |proj g|=  1.44932D-01\n"
+     ]
     }
    ],
    "source": [
