--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -3973,7 +3973,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "At iterate    5    f=  1.47854D+00    |proj g|=  1.44932D-01\n"
+      "At iterate    5    f=  1.47854D+00    |proj g|=  1.44932D-01\n",
+      "\n",
+      "At iterate   10    f=  1.45387D+00    |proj g|=  9.96695D-03\n"
      ]
     }
    ],
