--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -3975,7 +3975,16 @@
       "\n",
       "At iterate    5    f=  1.47854D+00    |proj g|=  1.44932D-01\n",
       "\n",
-      "At iterate   10    f=  1.45387D+00    |proj g|=  9.96695D-03\n"
+      "At iterate   10    f=  1.45387D+00    |proj g|=  9.96695D-03\n",
+      "\n",
+      "At iterate   15    f=  1.44818D+00    |proj g|=  2.81242D-03\n",
+      "\n",
+      "At iterate   20    f=  1.44742D+00    |proj g|=  2.42727D-03\n",
+      "\n",
+      "At iterate   25    f=  1.44718D+00    |proj g|=  1.03788D-03\n",
+      "\n",
+      "At iterate   30    f=  1.44714D+00    |proj g|=  5.02433D-04\n",
+      "  ys=-4.043E-05  -gs= 3.152E-06 BFGS update SKIPPED\n"
      ]
     }
    ],
