--- a/explore_oil_markets.ipynb
+++ b/explore_oil_markets.ipynb
@@ -3984,7 +3984,35 @@
       "At iterate   25    f=  1.44718D+00    |proj g|=  1.03788D-03\n",
       "\n",
       "At iterate   30    f=  1.44714D+00    |proj g|=  5.02433D-04\n",
-      "  ys=-4.043E-05  -gs= 3.152E-06 BFGS update SKIPPED\n"
+      "  ys=-4.043E-05  -gs= 3.152E-06 BFGS update SKIPPED\n",
+      "\n",
+      "           * * *\n",
+      "\n",
+      "Tit   = total number of iterations\n",
+      "Tnf   = total number of function evaluations\n",
+      "Tnint = total number of segments explored during Cauchy searches\n",
+      "Skip  = number of BFGS updates skipped\n",
+      "Nact  = number of active bounds at final generalized Cauchy point\n",
+      "Projg = norm of the final projected gradient\n",
+      "F     = final function value\n",
+      "\n",
+      "           * * *\n",
+      "\n",
+      "   N    Tit     Tnf  Tnint  Skip  Nact     Projg        F\n",
+      "    5     32     58      1     1     0   1.043D-04   1.447D+00\n",
+      "  F =   1.4471410477753044     \n",
+      "\n",
+      "CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH             \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Warning:  more than 10 function and gradient\n",
+      "   evaluations in the last line search.  Termination\n",
+      "   may possibly be caused by a bad search direction.\n"
      ]
     }
    ],
